# comp-arch-lab2

./: CMakeLists.txt  Makefile  aklab2.cpp  build.ninja  main.cpp  rules.ninja
